--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1494,7 +1494,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #47b2e4;
+  background: #d19b1e ;
   color: #fff;
 }
 
@@ -1591,7 +1591,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #47b2e4;
+  background: #073b90 ;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -1600,7 +1600,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #209dd8;
+  background: #d19b1e ;
 }
 
 @-webkit-keyframes animate-loading {
