--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,11 +655,11 @@ section {
   border-radius: 4px;
   transition: 0.3s;
   line-height: 1;
-  color: #47b2e4;
+  color: #073b90 ;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #073b90 ;
 }
 
 .about .content .btn-learn-more:hover {
