--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1723,7 +1723,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #073b90 ;
+  background: #d19b1e  ;
 }
 
 #footer .footer-top {
