--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ h6 {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 25px 0px;
+  padding: 5px 0px;
 }
 
 #header.header-scrolled,
@@ -398,10 +398,11 @@ h6 {
   width: 100%;
   height: 80vh;
   background: #073b90  ;
+  padding: 10px;
 }
 
 #hero .container {
-  padding-top: 92px;
+  padding-top: 72px;
 }
 
 #hero h1 {
