--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ h6 {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 5px 0px;
+  padding: 10px 0px;
 }
 
 #header.header-scrolled,
@@ -143,7 +143,7 @@ h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 20px;
 }
 
 /*--------------------------------------------------------------
@@ -397,12 +397,13 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #073b90  ;
-  padding: 10px;
+  background: #073b90;
+  padding: auto;
+  
 }
 
 #hero .container {
-  padding-top: 72px;
+  padding-top: 2px;
 }
 
 #hero h1 {
