--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,9 @@ h6 {
   z-index: 997;
   padding: 10px 0px;
 }
+#lmj{
+  height: 80px;
+}
 
 #header.header-scrolled,
 #header.header-inner-pages {
@@ -397,9 +400,7 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #073b90;
-  padding: auto;
-  
+  background: #073b90;    
 }
 
 #hero .container {
@@ -463,14 +464,17 @@ h6 {
 #hero .animated {
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
-
+@media(max-width:1400px){
+  #hero{
+    padding-top: 150px;
+  }
+}
 @media (max-width: 991px) {
   #hero {
     height: 100vh;
-    text-align: center;
+    text-align: center;     
   }
-
-  #hero .animated {
+   #hero .animated {
     -webkit-animation: none;
     animation: none;
   }
